--- a/src/style.global.css
+++ b/src/style.global.css
@@ -1,6 +1,16 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto';
 
-.row {
-  border: 1px solid;
+body {
+  font-size: 'Roboto', sans-serif;
+  background: #eee;
+}
+
+h2 {
+  font-size: 14px;
+  margin: 0;
+  padding: 5px;
+  font-weight: bold;
+  display: inline-block;
 }
 
 .column {
@@ -11,6 +21,20 @@
 
 .code-view,
 .output-view {
-  height: 400px;
   overflow: hidden;
+  padding: 10px;
+}
+
+.output-view > .content {
+  background: #eee;
+  height: 100%;
+  padding: 10px;
+  border: 1px solid #aaa;
+  height: 330px;
+  overflow: scroll;
+}
+
+.ace_editor {
+  border: 1px solid #aaa;
+  width: 100%;
 }
