--- a/src/components/RenderedOutput/style.scss
+++ b/src/components/RenderedOutput/style.scss
@@ -7,8 +7,8 @@
 
 .content {
   background: #eee;
+  width: 100%;
   height: 100%;
-  padding: $padding;
   border: 1px solid #aaa;
   height: 250px;
   overflow: scroll;
