--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,6 +1,8 @@
-$padding: 10px;
+// Spacing
+$padding: 5px;
 $margin: 10px;
 
+// Colors
 $color-title: #eee;
 $color-background: #f0f0f0;
 $color-blue: #007FFF;
