--- a/src/components/RenderedOutput/style.scss
+++ b/src/components/RenderedOutput/style.scss
@@ -6,10 +6,15 @@
 }
 
 .content {
-  background: #eee;
+  background: #fff;
   width: 100%;
-  height: 100%;
-  border: 1px solid #aaa;
-  height: 250px;
+  height: calc(100% - 25px);
+  border: 0px solid #aaa;
   overflow: scroll;
+}
+
+.title {
+  background: white;
+  color: black;
+  background: white;
 }
