--- a/src/style/style.global.scss
+++ b/src/style/style.global.scss
@@ -1,8 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Oxygen:300,400);
 @import 'variables';
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background: $color-background;
+  font-family: 'Oxygen', sans-serif;
+  background: #21252b;
   margin: 0;
 }
 
@@ -11,11 +12,14 @@ div {
 }
 
 h2 {
-  font-size: 11px;
-  background: #333;
+  font-size: 13px;
+  background: #263238;
   margin: 0;
   padding: 5px;
-  font-weight: normal;
+  font-weight: 300;
   display: block;
   color: $color-title;
+  i {
+    padding-right: $padding;
+  }
 }
